# cargo-parco-proj

./: Cargo.toml  README.md
assets/: Cargo.template  Proj.template
assets/src/: lib.rs
src/: lib.rs  main.rs
src/binary/: error.rs  handler.rs  mod.rs  mode.rs
src/binary/proj_scaffold/: error.rs  handler.rs  input_path.rs  mod.rs  utils.rs
src/macros/: embed.rs  error.rs  mod.rs  proj.rs
